--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </ul>
         </div>
       </nav>
+  
 
     <!-- Header -->
   <div class="header">
@@ -54,10 +55,10 @@
   <!-- Details -->
   <div class="alert alert-white">
     <p class="h5 text-center">Make Your Connection More Secure and Unblock All Sites With SSH Account</p>
-  <br>
+  <br><br>
     <p class="h4"><b>Latest News</b></p>
     <ul>
-      <li><b>2021-01-04: New 6 Temporary Servers Added. Including 4 Singapore Servers, 2 Japan Servers.</b></li>
+      <li><b>2020-01-21 New 8 Temporary Servers Added.</b></li>
       <li>2021-01-04: Update Singapore Server Username and Password.</li>
       <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
       <li>2020-12-26: Singapore Server New Ip Updated.</li>
@@ -82,30 +83,40 @@
   <div id="ssh/ssl"></div>
   <!-- Grid -->
   <!-- Row 1 -->
-  <p class="h4 m-3"><b>SSH/SSL Servers {Permanent}</b></p>
+  <p class="h4 m-3"><b>SSH/SSL Servers</b></p>
   <div class="card-deck">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><b>SG-S01</b></h5>
+          <h5 class="card-title"><b>SG-TS01</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>188.166.218.157</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/" class="text-dark"><b>Contact for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.168</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
       </div>
      <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><b>SG-S02</b></h5>
+          <h5 class="card-title"><b>SG-TS02</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>47.241.107.246</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>Can't put it in public</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-id-card"style="font-size:20px;"></i>   &nbsp;<a href="https://lalantha.me/" class="text-dark"><b>Contact for Username & Password</b></a></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.105.112.130</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
+          </ul>  
+        </div>
+      </div>
+       <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>SG-TS03</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.22</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
@@ -118,6 +129,33 @@
       <!-- Row 2 -->
 
       <div class="card-deck">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>SG-TS04</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>128.199.82.219</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepix</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
+          </ul>  
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><b>SG-PS05 {Squid}</b></h5>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>188.166.218.157</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
+          </ul>  
+        </div>
+      </div>
+    </div>
+    <br>
+       <div class="card-deck">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><b>US-S01</b></h5>
@@ -138,12 +176,11 @@
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>132.145.173.119</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>lalantha</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: red;">Not Working</span></b></li>
           </ul>  
         </div>
       </div>
     </div>
-    <br>
     <!-- Row 3 -->
     <div class="card-deck">
      <div class="card">
@@ -172,20 +209,16 @@
       </div>
     </div>
     <br>
-    <p class="h4 m-3"><b>SSH/SSL Servers {Temporary}</b></p>
-    <p class="h6 text-danger"><b>* Disclaimer: These Server Sare Not My Own Servers. I Found These Server From Internet Configured By Someone Else. I Don't Know Exactly Expiration Date or Status of These Severs. You Can Try It By Yourself.</b></p>
-    <br>
     <div class="card-deck">
      <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><b>SG-TS01</b></h5>
+          <h5 class="card-title"><b>JP-TS01</b></h5>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.168</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.105.112.130</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>192.46.225.22</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Japan</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>139.162.106.247</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
       </div>
@@ -194,21 +227,10 @@
           <h5 class="card-title"><b>JP-TS02</b></h5>
           <ul class="list-group">
             <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Japan</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>139.162.106.247</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>172.104.127.10</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
             <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
-          </ul>  
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title"><b>SG-TS02</b></h5>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Singapore</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>128.199.82.219</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>pixepix</b></li>
-            <li class="list-group-item list-group-item-white"><i class="fa fas fa-key"style="font-size:20px;"></i>   &nbsp;<b>pixepixe</b></li>
+            <li class="list-group-item list-group-item-white"><i class="fa fa-clock-o"style="font-size:20px;"></i>   &nbsp;<b>Status: <span style="color: green;">Working</span></b></li>
           </ul>  
         </div>
       </div>
