--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Header -->
   <div class="header">
     <br><br>
-    <h1 style="color: #12232E";><b>MickySSH</b></h1>
+    <h1 style="color: #12232E" class="display-3"><b>MickySSH</b></h1>
     <h5 style="color: #203647">High Speed Premium SSH SSL/TLS V2Ray Servers</h5>
   </div>
   <hr />
