--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   <div id="ssh/ssl"></div>
   <!-- Grid -->
   <p class="h6 text-danger"><b>* All Servers Username and Password Will Change Every Week {Next Date: 2021-01-30}</b></p>
-  <p class="h6 text-danger"><b>* Sever Code "XX-S00" - My Own Hosted Servers</b></p>
-  <p class="h6 text-danger"><b>* Sever Code "XX-TS00" - Servers Found in Internet. Owner Unkown.</b></p>
+  <p class="h6 text-danger"><b>* Sever Code "XX-S0X" - My Own Hosted Servers</b></p>
+  <p class="h6 text-danger"><b>* Sever Code "XX-TS0X" - Servers Found in Internet. Owner Unkown.</b></p>
   <p class="h4 m-3"><b>SSH/SSL Servers</b></p>
   <!-- Row 1 -->
   <div class="card-deck">
