--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <p class="h4"><b>Service Ports</b></p>
     <ul>
       <li><b>SSH Port: 22</b></li>
-      <li><b>Dropbear Port: 80</b></li>
+      <li><b>Dropbear Port: 80, 550</b></li>
       <li><b>Stunnel Port: 443</b></li>
       <li><b>Squid Proxy Ports: 8080, 3128, 8000</b></li>
       <li><b>BadVPN Port: 7300</b></li>
